<resources>
    <string name="app_name">Movie Catalogue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="popular_movies">Popular Movies</string>
    <string name="popular_tv_shows">Popular TV Shows</string>
    <string name="poster">Poster</string>
    <string name="title">Title</string>
    <string name="tagline">Tagline</string>
    <string name="overview">Overview</string>
    <string name="title_movie">Movie</string>
    <string name="title_tvshow">TV Show</string>
    <string name="title_favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_favorite">Add Favorite</string>
</resources>